--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.1.1",
     "matter-js": "^0.17.1",
     "rxjs": "~6.6.0",
+    "star-gameengine": "github:starlone/star-gameengine",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
