--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run prettier:fix && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prettier": "prettier --check src/**/*",
+    "prettier:fix": "prettier --write src/**/*"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +26,7 @@
     "rxjs": "~6.6.0",
     "star-gameengine": "github:starlone/star-gameengine",
     "tslib": "^2.3.0",
+    "tslint": "^6.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "2.4.1",
     "typescript": "~4.3.5"
   }
 }
