--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prettier": "prettier --check src/**/*",
-    "prettier:fix": "prettier --write src/**/*"
+    "prettier:fix": "prettier --write src/**/*",
+    "deploy": "ng deploy --base-href=/star-gameengine-editor/"
   },
   "private": true,
   "dependencies": {
